# rogue5.4

./: AUTHORS.md  CHANGELOG.md  LICENSE.md  Makefile  Makefile.am  Makefile.in  Makefile.std  README.md  acinclude.m4  armor.c  chase.c  command.c  config.h.in  configure  configure.ac  continue.c  control.c  ctlmod.c  daemon.c  daemons.c  edit.c  error.c  ether.c  extern.c  extern.h  fight.c  find.c  findpw.c  init.c  inter.c  io.c  list.c  mach_dep.c  main.c  mdport.c  misc.c  monsters.c  move.c  netprot.c  netprot.h  (+42 more)
